spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -554,13 +554,13 @@ header p{
 }
 
 #workshopclass2 {
-    height: 100%;
-    padding-bottom: 2%;
+    height: 250px;
+    padding-bottom: 10px;
     background: #eeeeee;
     margin: 20px;
     padding: 20px;
     border-radius: 10px;
-    margin-bottom: 5%;
+    margin-bottom: 20px;
     
     
     /*/box-shadow: 1px 2px 4px rgba(0, 0, 0, .1);/*/
@@ -763,7 +763,7 @@ header p{
 }
 
 .team2 h2{
-  font-size: 23px;
+  font-size: 2px;
     font-family: 'Roboto', sans-serif;
     color: #000000;
     width: auto;
